--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.0-rc3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -101,7 +106,7 @@
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>fail</checksumPolicy>
+				<!-- <checksumPolicy>fail</checksumPolicy> -->
 			</releases>
 			<id>com.killer923</id>
 			<name>killer Maven Repository</name>
